<resources>
    <string name="app_name">Layouts</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="login_linear_layout">Login Linear Layout</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="button">Button</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="i_forgot_my_password">I forgot my password</string>
</resources>