<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:text="@string/linear_layout"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginLinearLayout" />

    <Button
        android:id="@+id/btnLoginLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:text="@string/login_linear_layout"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnLinearLayout"
        app:layout_constraintEnd_toEndOf="@+id/btnLinearLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnLinearLayout"
        app:layout_constraintTop_toBottomOf="@+id/btnConstraintLayout" />

    <Button
        android:id="@+id/btnConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="3dp"
        android:text="@string/constraint_layout"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginLinearLayout"
        app:layout_constraintEnd_toEndOf="@+id/btnLoginLinearLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnLoginLinearLayout"
        app:layout_constraintTop_toBottomOf="@+id/btnFrameLayout" />

    <Button
        android:id="@+id/btnFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="3dp"
        android:text="@string/frame_layout"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnConstraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/btnConstraintLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnConstraintLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />
</androidx.constraintlayout.widget.ConstraintLayout>